# seminar-code

./: Makefile  README.md  pyproject.toml
code-project/: .gitignore
notebooks/: a1-data.ipynb
scripts/: assert_all_trained.py  proc_data_plot.py  seasonal.R  train_models.py
src/fintopmet/: __init__.py  fp.py  log_utils.py
src/fintopmet/aux/: benchmark.py
src/fintopmet/data/: data_utils.py  transforms.py
src/fintopmet/models/: acc.py  forecast.py  gradientboosting.py
